# FastX-Tui-Plugin-DEMFaultAnalyzer

./: .gitignore  README.md  config_schema.json  dem_fault_analyzer.py  fastx_plugin.py  fastx_tui_plugin.py  manual.md  pyproject.toml
.github/workflows/: bump-version.yml
