[project]
name = "FastX-Tui-Plugin-DEMFaultAnalyzer"
description = "基于AUTOSAR CP和ETAS DEM的DTC故障状态分析工具"
version = "1.0.1"
readme = "README.md"
homepage = ""
repository = ""
classifiers = [ "Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent", "Topic :: Scientific/Engineering :: Automotive", "Topic :: Software Development :: Libraries :: Python Modules", "Topic :: System :: Logging",]
dependencies = [ "rich>=13.0.0",]
[[project.authors]]
name = "FastX Team"
email = ""

[build-system]
requires = [ "setuptools>=61.0.0", "wheel>=0.37.0",]
build-backend = "setuptools.build_meta"

[project.license]
text = "MIT"

[project.optional-dependencies]
dev = [ "pytest>=7.0.0", "black>=23.0.0", "flake8>=6.0.0",]

[tool.black]
line-length = 88
target-version = [ "py38", "py39", "py310",]
include = ".pyi?$"
exclude = "\\.\n|build\n|dist\n|venv\n|__pycache__\n|\\.git\n|\\.github\n|\\.vscode\n|\\.idea\n"

[tool.flake8]
max-line-length = 88
exclude = ".git,__pycache__,venv,build,dist"
ignore = "E203, W503"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v"
testpaths = [ "tests",]
